--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,7 +24,7 @@
 <body>
     <nav id="Topnav">
         <div id="Left">
-            <a href="#"><img id="Websitelogo" src="../Images/logo.png"></a>
+            <a href="#"><img id="Websitelogo" src="logo.png"></a>
         </div>
         <div id="Middle">
             <a href="#welcome">Home</a>
