--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,9 @@
     crossorigin="anonymous">
     </script>
     <!-- <script>scr="index.js"</script> -->
+	<style>
+		html{background-color: #444 ;}
+	</style>
 </head>
 <body>
     <nav id="Topnav">
