--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous">
     </script>
-    <!-- <script>scr="index.js"</script> -->
 </head>
 <body>
     <nav id="Topnav">
@@ -27,18 +26,18 @@
             <a href="#"><img id="Websitelogo" src="../Images/logo.png"></a>
         </div>
         <div id="Middle">
-            <a href="#welcome">Home</a>
+            <a href="#">Home</a>
             <div class="Dropdown">
                 <button class="Dropbtn">Subjects&nbsp;<i class="fa fa-caret-down"></i>
                 </button>
                 <div class="Dropdown-content">
-                    <a href="Subjects/Classic-physics/Classic-physics.html">Classical physics</a>
-                    <a href="Subjects/Quantum-physics/Quantum-physics.html">Quantum physics</a>
-                    <a href="Subjects/Relativity/Relativity.html">Relativity</a>
+                    <a href="HTML/Subjects/Classical-physics/Classical-physics.html">Classical physics</a>
+                    <a href="HTML/Subjects/Quantum-physics/Quantum-physics.html">Quantum physics</a>
+                    <a href="HTML/Subjects/Relativity/Relativity.html">Relativity</a>
                 </div>   
             </div>           
-            <a href="#news">News</a>
-            <a href="#">Forum</a>
+            <a href="HTML/News/News.html">News</a>
+            <a href="HTML/Forum/Forum.html">Forum</a>
             <!-- <a href="#about">About us</a>
             <a href="3d.html">3d</a>
             <a href="test.html">test</a> -->
@@ -65,13 +64,13 @@
         </section>
         <section class="mainsection" id="news">
             <div class="sectionclouds" id="sectionclouds3">
-                Visit the news section, where we will cover all the latest research and fiction-like discoveries in physics.
+                Visit the <a href="HTML/News/News.html">news section</a>, where we will cover all the latest research and fiction-like discoveries in physics.
             </div>
             <img src="../Images/quantum.png" class="homeimgs" id="newsimg">
         </section>
         <section class="mainsection" id="questions">
             <div class="sectionclouds" id="sectionclouds4">
-                Contact us if you have any questions, or visit the forums and ask the community!
+                <a href="HTML/Contact/Contact.html">Contact us</a> if you have any questions, or visit <a href="HTML/Forum/Forum.html">the forums</a> and ask the community!
             </div>
             <img src="../Images/quantum.png" class="homeimgs" id="questionsimg">
         </section>
@@ -83,14 +82,14 @@
         </section>
     </main>
     <nav id="Bottomnav">
-        <div class="grid item1">FAQ (Frequently Asked Questions)</div>
-        <div class="grid item2">About us</div>
+        <div class="grid item1"><a href="HTML/FAQ/FAQ.html">FAQ (Frequently Asked Questions)</a></div>
+        <div class="grid item2"><a href="HTML/About-us/About-us.html">About us</a></div>
         <div class="grid item3">Connect with us on:</div>
-        <div class="grid item4"><i class="fab fa-twitter"></i>&nbsp;Twitter</div>
-        <div class="grid item5"><i class="fab fa-instagram"></i>&nbsp;Instagram</div>
+        <div class="grid item4"><a href="#"><i class="fab fa-twitter"></i>&nbsp;Twitter</a></div>
+        <div class="grid item5"><a href="#"><i class="fab fa-instagram"></i>&nbsp;Instagram</a></div>
         <div class="grid item6"> © 2020 Physics Explained</div>
-        <div class="grid item7"><i class="fab fa-facebook-f"></i>&nbsp;Facebook</div>
-        <div class="grid item8"><i class="fas fa-envelope-square"></i>&nbsp;E-mail</div>
+        <div class="grid item7"><a href="#"><i class="fab fa-facebook-f"></i>&nbsp;Facebook</a></div>
+        <div class="grid item8"><a href="#"><i class="fas fa-envelope-square"></i>&nbsp;E-mail</a></div>
     </nav>
     <script>
         // Function that detects if something is in the viewport (if it is on physical screen)
