--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous">
     </script>
+    <!-- favicon code -->
+    <link rel="icon" type="image/png" href="Images/logo.png"/>
+
 </head>
 <body>
     <nav id="Topnav">
