--- a/index.html
+++ b/index.html
@@ -2,47 +2,47 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/b35ddec95c.js" crossorigin="anonymous"></script>
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Physics Explained!</title>
+    <!-- babylonjs 3d js framework script -->
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <!-- JQuery js framework script -->
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-    <script
-	src="https://code.jquery.com/jquery-3.5.1.js"
-	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous">
-    </script>
+    <script	src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <!-- title -->
+    <title>Welcome to Physics Explained!</title>
     <!-- favicon code -->
     <link rel="icon" type="image/png" href="Images/logo.png"/>
-
+    <!-- css style sheets -->
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
     <nav id="Topnav">
         <div id="Left">
-            <a href="#"><img id="Websitelogo" src="../Images/logo.png"></a>
+            <a href="#"><img id="Websitelogo" src="Images/logo.png"></a>
         </div>
         <div id="Middle">
             <a href="#">Home</a>
             <div class="Dropdown">
-                <button class="Dropbtn">Subjects&nbsp;<i class="fa fa-caret-down"></i>
-                </button>
+                <a href="HTML/Subjects/Classical-physics/Classical-physics.html">Subjects &nbsp;<i class="fa fa-caret-down"></i></a>
                 <div class="Dropdown-content">
                     <a href="HTML/Subjects/Classical-physics/Classical-physics.html">Classical physics</a>
+                    <a href="HTML/Subjects/calculus/calculus1.html">Calculus 1</a>
                     <a href="HTML/Subjects/Quantum-physics/Quantum-physics.html">Quantum physics</a>
                     <a href="HTML/Subjects/Relativity/Relativity.html">Relativity</a>
                 </div>   
             </div>           
             <a href="HTML/News/News.html">News</a>
             <a href="HTML/Forum/Forum.html">Forum</a>
-            <!-- <a href="#about">About us</a>
-            <a href="3d.html">3d</a>
+            <a href="HTML/todo.html">To-do</a>
+            <!-- <a href="3d.html">3d</a>
             <a href="test.html">test</a> -->
         </div>
         <div id="Right">
@@ -57,31 +57,31 @@
             <div class="sectionclouds" id="sectionclouds1">
                 Welcome to Physics Explained!
             </div>
-            <img src="../Images/quantum.png" class="homeimgs" id="welcomeimg">
+            <img src="Images/quantum.png" class="homeimgs" id="welcomeimg">
         </section>
         <section class="mainsection" id="about">
             <div class="sectionclouds" id="sectionclouds2">
                 On this website we will try and explain everything physics. From starter to university level difficulty.
             </div>
-            <img src="../Images/physicsfun.png" class="homeimgs" id="aboutimg">
+            <img src="Images/physicsfun.png" class="homeimgs" id="aboutimg">
         </section>
         <section class="mainsection" id="news">
             <div class="sectionclouds" id="sectionclouds3">
                 Visit the <a href="HTML/News/News.html">news section</a>, where we will cover all the latest research and fiction-like discoveries in physics.
             </div>
-            <img src="../Images/quantum.png" class="homeimgs" id="newsimg">
+            <img src="Images/quantum.png" class="homeimgs" id="newsimg">
         </section>
         <section class="mainsection" id="questions">
             <div class="sectionclouds" id="sectionclouds4">
                 <a href="HTML/Contact/Contact.html">Contact us</a> if you have any questions, or visit <a href="HTML/Forum/Forum.html">the forums</a> and ask the community!
             </div>
-            <img src="../Images/quantum.png" class="homeimgs" id="questionsimg">
+            <img src="Images/quantum.png" class="homeimgs" id="questionsimg">
         </section>
         <section class="mainsection" id="end">
             <div class="sectionclouds" id="sectionclouds5">
                 Have fun exploring and learning all the things physics has to offer!
             </div>
-            <img src="../Images/quantum.png" class="homeimgs" id="endimg">
+            <img src="Images/quantum.png" class="homeimgs" id="endimg">
         </section>
     </main>
     <nav id="Bottomnav">
